--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,20 @@ header{
    }
 }
 
+@media (max-width:450px){
+   .header-container{
+      align-items: start;
+      gap: 20px;
+      flex-direction: column;
+   }
+   nav{
+      width: 100%;
+   }
+   nav .header-navegacao{
+      justify-content: space-between;
+   }
+}
+
 /* Main */
 main{
    background-color: #000000;
